# six_degrees_of_freedom_rigid_body_dynamics

./: 6dofScript.py
6dofSolver/MATLAB/: DynamicsSolver.m  DynamicsSolverScript.m  Optimizer1_Range_LaunchAngle.m  Optimizer2_Range_LaunchAngle.m  mass_properties.doc
6dofSolver/MATLAB/Interpolation Programs for DynamicsSolver/: Interpolation_Aerocoeffs.m  Interpolation_Aerocoeffs_previous_version_DynamicsSolver.m  Interpolation_Thrust.m  Interpolation_funcoftwovariables.m
6dofSolver/Structural_tool/: CMakeLists.txt  a.out  calculate_structural_prop  calculate_structural_prop.cpp  calculate_structural_prop.h  define_variables.cpp  define_variables.h  octave-core  strucpropcal.m  strucpropcal_corrected.m  strucpropcal_trimmed.m
6dofSolver/cpp/: define_variables.cpp  define_variables.h  dynamics_solver  dynamics_solver.cpp  dynamics_solver.h
